[package]
name = "gen_rand_str"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stats = []

[dependencies]
crossbeam = "0.8"
hex = "0.4"
humantime = "2.1"
parking_lot = "0.11"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.5"
sha-1 = "0.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
incremental = false
debug = true
overflow-checks = false
panic = "abort"
