[package]
name = "pow-challenge"
version = "0.1.0"
edition = "2021"
description = "Exasol coding challenge"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "GPL-3.0-only"
homepage = "https://github.com/fredmorcos/pow-challenge"
repository = "https://github.com/fredmorcos/pow-challenge"
readme = "README.md"
keywords = ["exasol", "pow", "challenge", "hash", "random-string"]
categories = ["authentication", "command-line-utilities", "cryptography", "cryptography::cryptocurrencies", "network-programming"]

[features]
stats = []

[dependencies]
hex = "0.4"
humantime = "2.1"
parking_lot = "0.11"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.5"
sha-1 = "0.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
incremental = false
debug = true
overflow-checks = false
panic = "abort"
